# OmniLAN

./: Cargo.toml  README.md  ok-proxy.example.yaml  omnilan.example.yaml
.github/workflows/: ci.yml
docs/: ARCHITECTURE.md
src/: app.rs  audit.rs  cli.rs  config.rs  enforcement.rs  main.rs  platform.rs  service.rs
src/application/: runner.rs
src/cli/: mod.rs
src/core/: mod.rs
src/core/enforcement/: mod.rs
src/core/engine/: mihomo.rs  mod.rs  singbox.rs
src/core/gateway/: mod.rs
src/domain/: config.rs  state.rs
src/engine/: mihomo.rs  mod.rs  singbox.rs
src/gateway/: mod.rs
src/infra/: mod.rs
src/infra/audit/: mod.rs
src/infra/kernel/: mod.rs
src/infra/platform/: linux.rs  macos.rs  mod.rs  windows.rs
src/infra/service/: mod.rs
